# ALTR_v2

./: README.md
Modules/actionRepertoire/: CMakeLists.txt
Modules/actionRepertoire/include/iCub/: actionRepertoire.h  actionUtils.hpp
Modules/actionRepertoire/src/: actionRepertoire.cpp  actionUtils.cpp  main.cpp
Modules/gazeCtrl/: CMakeLists.txt
Modules/gazeCtrl/include/iCub/: gaze.h
Modules/gazeCtrl/src/: gaze.cpp  main.cpp
Modules/prediction/: CMakeLists.txt
Modules/prediction/include/iCub/: Prediction.h  predictionUtils.hpp
Modules/prediction/src/: Prediction.cpp  main.cpp  predictionUtils.cpp
Modules/scene_recognition/: CMakeLists.txt
Modules/scene_recognition/include/iCub/: Recognition.h  perceptionUtils.hpp
Modules/scene_recognition/include/simpleTrackingModule/: simpleTrackingModule.h  trackingC.h
Modules/scene_recognition/src/: Recognition.cpp  main.cpp  simpleTrackingModule.cpp  trackingC.cpp
